--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div>
       <label for="offeredPrice">Kolik jste ochotni zaplatit:</label>
-      <input type="number" id="offeredPrice" name="offeredPrice" />
+      <input type="number" id="offeredPrice" name="offeredPrice" min="0" />
       <button class="btn-offerPrice">Porovnej ceny</button>
     </div>
     <div>
@@ -88,7 +88,7 @@
     <div>
       <label for="email">Kontaktní email:</label>
       <input type="email" id="email" />
-      <button type="submit" disabled>Odeslat</button>
+      <button class="btn-email" disabled>Odeslat</button>
     </div>
 
     <script src="script.js"></script>
