--- a/index.html
+++ b/index.html
@@ -7,102 +7,114 @@
   </head>
   <body>
     <h1>Stránka Půjčovna - objednávka</h1>
-
-    <!-- Checkboxes and Numbers-->
-    <div>
-      <input type="checkbox" id="mountain" name="type" value="500" />
-      <label for="mountain">horské 500 Kč/den</label>
-      <input
-        type="number"
-        id="numOfMountain"
-        name="numOfMountain"
-        min="0"
-        value="1"
-      />
-      <label for="numOfMountain">ks</label>
-    </div>
-    <div>
-      <input type="checkbox" id="kid" name="type" value="200" />
-      <label for="kid">dětské 200 Kč/den</label>
-      <input type="number" id="numOfKid" name="numOfKid" min="0" value="1" />
-      <label for="numOfKid">ks</label>
-    </div>
-    <div>
-      <input type="checkbox" id="road" name="type" value="1500" />
-      <label for="road">silniční 1 500 Kč/den</label>
-      <input type="number" id="numOfRoad" name="numOfRoad" min="0" value="1" />
-      <label for="numOfRoad">ks</label>
-    </div>
-    <div>
-      <input type="checkbox" id="gravel" name="type" value="2500" />
-      <label for="gravel">gravel 2 500 Kč/den</label>
-      <input
-        type="number"
-        id="numOfGravel"
-        name="numOfGravel"
-        min="0"
-        value="1"
-      />
-      <label for="numOfGravel">ks</label>
-    </div>
-    <!-- Select -->
-    <label for="loanPeriod">Počet dnů zápůjčky:</label>
-    <select name="loanPeriod" id="loanPeriod">
-      <option value="1">1 den</option>
-      <option value="5">5 dnů</option>
-      <option value="7">týden</option>
-      <option value="14">14 dní</option>
-    </select>
-    <!-- Radio -->
-    <fieldset>
-      <legend>Nosič</legend>
+    <form>
+      <!-- Checkboxes and Numbers-->
       <div>
-        <input type="radio" id="roofRack" name="rack" value="1.05" />
-        <label for="roofRack"
-          >cyklonosič střešní (+ 5 procent z celkové ceny zápůjčky navíc)</label
-        >
+        <input type="checkbox" id="mountain" name="type" value="500" />
+        <label for="mountain">horské 500 Kč/den</label>
+        <input
+          type="number"
+          id="numOfMountain"
+          name="numOfMountain"
+          min="0"
+          value="1"
+        />
+        <label for="numOfMountain">ks</label>
       </div>
       <div>
-        <input type="radio" id="towbarRack" name="rack" value="1.10" />
-        <label for="towbarRack"
-          >cyklonosič na tažné zařízení (+ 10 procent z celkové ceny zápůjčky
-          navíc)</label
-        >
+        <input type="checkbox" id="kid" name="type" value="200" />
+        <label for="kid">dětské 200 Kč/den</label>
+        <input type="number" id="numOfKid" name="numOfKid" min="0" value="1" />
+        <label for="numOfKid">ks</label>
       </div>
       <div>
-        <input type="radio" id="noRack" name="rack" value="1" checked />
-        <label for="noRack">není třeba cyklonosič</label>
+        <input type="checkbox" id="road" name="type" value="1500" />
+        <label for="road">silniční 1 500 Kč/den</label>
+        <input
+          type="number"
+          id="numOfRoad"
+          name="numOfRoad"
+          min="0"
+          value="1"
+        />
+        <label for="numOfRoad">ks</label>
       </div>
-    </fieldset>
+      <div>
+        <input type="checkbox" id="gravel" name="type" value="2500" />
+        <label for="gravel">gravel 2 500 Kč/den</label>
+        <input
+          type="number"
+          id="numOfGravel"
+          name="numOfGravel"
+          min="0"
+          value="1"
+        />
+        <label for="numOfGravel">ks</label>
+      </div>
+      <!-- Select -->
+      <label for="loanPeriod">Počet dnů zápůjčky:</label>
+      <select name="loanPeriod" id="loanPeriod">
+        <option value="1">1 den</option>
+        <option value="5">5 dnů</option>
+        <option value="7">týden</option>
+        <option value="14">14 dní</option>
+      </select>
+      <!-- Radio -->
+      <fieldset>
+        <legend>Nosič</legend>
+        <div>
+          <input type="radio" id="roofRack" name="rack" value="1.05" />
+          <label for="roofRack"
+            >cyklonosič střešní (+ 5 procent z celkové ceny zápůjčky
+            navíc)</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="towbarRack" name="rack" value="1.10" />
+          <label for="towbarRack"
+            >cyklonosič na tažné zařízení (+ 10 procent z celkové ceny zápůjčky
+            navíc)</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="noRack" name="rack" value="1" checked />
+          <label for="noRack">není třeba cyklonosič</label>
+        </div>
+      </fieldset>
 
-    <!-- Price -->
-    <div>
-      <label for="calculatedPrice">Celková cena zápůjčky:</label>
-      <input type="text" id="calculatedPrice" name="calculatedPrice" readonly />
-      <button class="btn-calculatePrice">Vypočítej cenu</button>
-    </div>
-    <div>
-      <label for="offeredPrice">Kolik jste ochotni zaplatit:</label>
-      <input type="number" id="offeredPrice" name="offeredPrice" min="0" />
-      <button class="btn-offerPrice">Porovnej ceny</button>
-    </div>
-    <div>
-      <label for="comparisonPrice">Výsledek porovnání:</label>
-      <input
-        type="text"
-        id="comparisonPrice"
-        name="comparisonPrice"
-        size="25"
-        readonly
-      />
-    </div>
-    <!-- Email -->
-    <div>
-      <label for="email">Kontaktní email:</label>
-      <input type="email" id="email" />
-      <button class="btn-email" disabled>Odeslat</button>
-    </div>
-
+      <!-- Price -->
+      <div>
+        <label for="calculatedPrice">Celková cena zápůjčky:</label>
+        <input
+          type="text"
+          id="calculatedPrice"
+          name="calculatedPrice"
+          readonly
+        />
+        <button type="button" class="btn-calculatePrice">Vypočítej cenu</button>
+      </div>
+      <div>
+        <label for="offeredPrice">Kolik jste ochotni zaplatit:</label>
+        <input type="number" id="offeredPrice" name="offeredPrice" min="0" />
+        <button type="button" class="btn-offerPrice">Porovnej ceny</button>
+      </div>
+      <div>
+        <label for="comparisonPrice">Výsledek porovnání:</label>
+        <input
+          type="text"
+          id="comparisonPrice"
+          name="comparisonPrice"
+          size="25"
+          readonly
+        />
+      </div>
+      <!-- Email -->
+      <div>
+        <label for="email">Kontaktní email:</label>
+        <input type="email" id="email" />
+        <button type="submit" class="btn-email" disabled>Odeslat</button>
+      </div>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
